packages/web/projects/web-components/src/components/others/select-button/select-button.component.scss
@import '../../../../../../../tokens/dist/style/scss/variables';
@import '../../../../scss/typography';


.option--with-icon{
  display: flex;
  gap: 5px;
  align-items: center;
  .freud-icon{
    font-size: 14px;
  }
}
.freud-select-button.freud-select-bgcolor {
  .p-selectbutton .p-button.p-highlight {
    color: $brand-color-04;
    background: $neutral-color-white;
    border: 1px solid $neutral-color-white;
  }
  .p-selectbutton .p-button {
    border: 1px solid $brand-color-05;
    background: $brand-color-04;
    color: $neutral-color-white;
  }
}

.freud-select-button {
  .p-selectbutton .p-button {
    @include typography($font-size-xxs, $font-weight-bold, $font-size-xxs);
    border-radius: $border-radius-md;
  }
}

.p-button:focus {
  box-shadow: 0 0 0 1px $brand-color-pure;
}


.freud-select-button:not(.freud-select-bgcolor) {
  .p-selectbutton .p-button.p-highlight {
    background-color: $brand-color-pure;
    border-color: $brand-color-pure;
    color: $neutral-color-white;
  }
  .p-selectbutton .p-button {
    border: 1px solid $neutral-color-light-04;
    color: $neutral-color-dark-03;
  }
}

